refactor: add new column
